--- a/web/projeler/comar/mimari/node_4.html
+++ b/web/projeler/comar/mimari/node_4.html
@@ -114,7 +114,7 @@ sağlayacaktır.
 <LI>Nesne modelinde, diğer bilgisayarlardan gelen nesnelerin, birer uzak
 nesne olarak yer alabilmesi ve kullanıcı tarafından aynen yerel nesneler
 gibi yönetilebilmesi, bir ağ yönetim sistemi oluşturmayı çok basit
-bir iş haline getirecektir. Hiyerarşik model burda erişim yetki denetimini
+bir iş haline getirecektir. Hiyerarşik model burada erişim yetki denetimini
 belli alt sistemler bazında ayarlamayı kolaylaştıracaktır.
 <LI>Aynı görevi yapabilecek birden fazla uygulama olabilir. Duruma göre
 görevlerin hepsine birden yaptırılması, veya içlerinden birinin seçilmesi
