--- a/web/projeler/comar/nedir/node_3.html
+++ b/web/projeler/comar/nedir/node_3.html
@@ -109,7 +109,7 @@ olanaklardan faydalanan, mevcut durumdaki gibi kullanıcıdan uygulamaya
 ön yüzleri inşa etmek özellikle mevcut durum ile kıyaslandığında son
 derece kolay olacaktır.
 <LI><B>Sistem yöneticisi</B> için sistemin tüm yapılandırmasının standart
-bir altyapı üzerine oturtulması, bununla beraber beraber yapılandırmanın
+bir altyapı üzerine oturtulması, bununla beraber yapılandırmanın
 kolayca taşınması, kullanıcı seçimlerine bağlı profillerin oluşturulması
 ve yönetilmesi de kolay olacaktır.
 </UL>
